# Umbra-Python-SDK

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: authentication.md  errors.md  faq.md  index.md  installation.md  markets.md  orders.md  quickstart.md  websockets.md
examples/: cancel_order.py  connect.py  fee_history.py  get_nbbo.py  list_markets.py  list_positions.py  place_limit_order.py  place_market_order.py  websocket_nbbo.py  websocket_orders.py  websocket_trades.py
tests/: conftest.py  test_auth.py  test_cancel.py  test_fees.py  test_markets.py  test_orders.py  test_pagination.py  test_parsing.py  test_positions.py  test_retries.py  test_trades.py  test_websocket.py
umbra/: __init__.py  _http.py  auth.py  balances.py  client.py  config.py  exceptions.py  fees.py  markets.py  orders.py  positions.py  trades.py  websocket.py
umbra/models/: __init__.py  common.py  fee.py  market.py  order.py  position.py  trade.py  wallet.py
umbra/types/: __init__.py  enums.py
umbra/utils/: __init__.py  _sync.py  money.py  pagination.py
